// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromPath 1`] = `
"{
 "type": "Article",
 "content": [
  {
   "type": "Paragraph",
   "content": [
    {
     "type": "Text",
     "value": {
      "string": "This is paragraph one. It has two sentences."
     }
    }
   ]
  },
  {
   "type": "Paragraph",
   "content": [
    {
     "type": "Text",
     "value": {
      "string": "Paragraph two."
     }
    }
   ]
  }
 ]
}"
`;

exports[`fromString 1`] = `
"{
 "type": "Article",
 "content": [
  {
   "type": "Paragraph",
   "content": [
    {
     "type": "Text",
     "value": {
      "string": "Hello world"
     }
    }
   ]
  }
 ]
}"
`;

exports[`fromTo 1`] = `
"This is paragraph one. It has two sentences.

Paragraph two.
"
`;

exports[`fromTo 2`] = `"<article><p><span>This is paragraph one. It has two sentences.</span></p><p><span>Paragraph two.</span></p></article>"`;

exports[`toString 1`] = `
"<article dtd-version="1.3" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:mml="http://www.w3.org/1998/Math/MathML">
  <body>
    <p>Hello<bold>again</bold>!</p>
  </body>
</article>"
`;
